[gd_scene load_steps=8 format=3 uid="uid://5l1ehy03cl33"]

[ext_resource type="Script" path="res://inversek.gd" id="1_4pud2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_o4n56"]
radius = 2.5

[sub_resource type="SphereMesh" id="SphereMesh_n1whn"]

[sub_resource type="SphereMesh" id="SphereMesh_6heua"]

[sub_resource type="SphereMesh" id="SphereMesh_3l0hf"]

[sub_resource type="BoxMesh" id="BoxMesh_cr1l1"]

[sub_resource type="BoxMesh" id="BoxMesh_2dtya"]

[node name="joint" type="Node2D"]
script = ExtResource("1_4pud2")

[node name="slam" type="Area2D" parent="."]
position = Vector2(50, 0)
scale = Vector2(0.1, 0.1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="slam"]
shape = SubResource("CircleShape2D_o4n56")

[node name="MeshInstance2D" type="MeshInstance2D" parent="slam"]
visible = false
scale = Vector2(10, 10)
mesh = SubResource("SphereMesh_n1whn")

[node name="slam2" type="Area2D" parent="."]
position = Vector2(50, 0)
scale = Vector2(0.1, 0.1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="slam2"]
shape = SubResource("CircleShape2D_o4n56")

[node name="MeshInstance2D" type="MeshInstance2D" parent="slam2"]
scale = Vector2(10, 10)
mesh = SubResource("SphereMesh_n1whn")

[node name="slam3" type="Area2D" parent="."]
position = Vector2(50, 0)
scale = Vector2(0.1, 0.1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="slam3"]
shape = SubResource("CircleShape2D_o4n56")

[node name="MeshInstance2D" type="MeshInstance2D" parent="slam3"]
scale = Vector2(10, 10)
mesh = SubResource("SphereMesh_n1whn")

[node name="slam4" type="Area2D" parent="."]
position = Vector2(50, 0)
scale = Vector2(0.1, 0.1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="slam4"]
shape = SubResource("CircleShape2D_o4n56")

[node name="MeshInstance2D" type="MeshInstance2D" parent="slam4"]
scale = Vector2(10, 10)
mesh = SubResource("SphereMesh_n1whn")

[node name="p1" type="MeshInstance2D" parent="."]
modulate = Color(1, 0, 0, 1)
scale = Vector2(20, 20)
mesh = SubResource("SphereMesh_6heua")

[node name="Area2D" type="Area2D" parent="p1"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="p1/Area2D"]
shape = SubResource("CircleShape2D_o4n56")

[node name="MeshInstance2D" type="MeshInstance2D" parent="p1/Area2D"]
modulate = Color(1, 1, 1, 0.168627)
scale = Vector2(5.04927, 4.9986)
mesh = SubResource("SphereMesh_3l0hf")

[node name="MeshInstance2D" type="MeshInstance2D" parent="p1"]
visible = false
position = Vector2(1.15, 0)
scale = Vector2(2.74948, 0.278569)
mesh = SubResource("BoxMesh_cr1l1")

[node name="p2" type="MeshInstance2D" parent="."]
modulate = Color(0, 1, 0, 1)
position = Vector2(50, 0)
scale = Vector2(20, 20)
mesh = SubResource("SphereMesh_6heua")

[node name="MeshInstance2D" type="MeshInstance2D" parent="p2"]
visible = false
position = Vector2(1.3, 0)
scale = Vector2(2.54762, 0.221754)
mesh = SubResource("BoxMesh_2dtya")

[node name="p3" type="MeshInstance2D" parent="."]
modulate = Color(0, 0, 1, 1)
position = Vector2(100, 0)
scale = Vector2(20, 20)
mesh = SubResource("SphereMesh_6heua")

[node name="MeshInstance2D2" type="MeshInstance2D" parent="p3"]
visible = false
modulate = Color(1, 1, 1, 0.168627)
z_index = -1
rotation = -2.68456
scale = Vector2(5.04927, 4.9986)
mesh = SubResource("SphereMesh_3l0hf")

[connection signal="area_entered" from="slam" to="." method="_on_slam_area_entered"]
[connection signal="area_entered" from="slam2" to="." method="_on_slam_2_area_entered"]
[connection signal="area_entered" from="slam3" to="." method="_on_slam_3_area_entered"]
[connection signal="area_entered" from="slam4" to="." method="_on_slam_4_area_entered"]
